unpackaged/main/default/objects/FPC_Proc_RateRev_Fees__c/FPC_Proc_RateRev_Fees__c.object-meta.xml
<CustomObject>
    <description>EPP Rate Review Detail Line</description>
    <label>Processor Rate Review Fee</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Processor Rate Review Fee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processor Rate Review Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>