unpackaged/main/default/objects/FPC_Proc_RateRev_Fees__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of processing rate review fees.</description>
    <inlineHelpText>Type in a description of processing rate review fees.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>