unpackaged/main/default/objects/FPC_Proc_RateRev_Fees__c/fields/Existing_Price__c.field-meta.xml
<CustomField>
    <fullName>Existing_Price__c</fullName>
    <description>Existing merchant processing pricing.</description>
    <inlineHelpText>Type in the merchants existing processing pricing.</inlineHelpText>
    <label>Existing Price</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>