unpackaged/main/default/objects/FPC_Proc_RateRev_Fees__c/fields/New_Expense__c.field-meta.xml
<CustomField>
    <fullName>New_Expense__c</fullName>
    <description>This field will calculate the new expense for the Rate Review Fee section.</description>
    <formula>QUANTITY__c  *  New_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will calculate the new expense for the Rate Review Fee section.</inlineHelpText>
    <label>New Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>