unpackaged/main/default/objects/FPC_Proc_RateRev_Fees__c/fields/Processor_Rate_Review__c.field-meta.xml
<CustomField>
    <fullName>Processor_Rate_Review__c</fullName>
    <label>Processor Rate Review</label>
    <referenceTo>FPC_Proc_RateRev__c</referenceTo>
    <relationshipLabel>Processor Rate Review Fees</relationshipLabel>
    <relationshipName>Processor_Rate_Review_Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>