unpackaged/main/default/objects/FPC_Proc_RateRev_Fees__c/fields/Processor_Rate_Review_ID__c.field-meta.xml
<CustomField>
    <fullName>Processor_Rate_Review_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Processor Rate Review ID</label>
    <referenceTo>FPC_Proc_RateRev__c</referenceTo>
    <relationshipLabel>Processor Rate Review Fees (Processor Rate Review ID)</relationshipLabel>
    <relationshipName>Processor_Rate_Review_Fees1</relationshipName>
    <type>Lookup</type>
</CustomField>