unpackaged/main/default/objects/FPC_Proc_RateRev_Fees__c/fields/QUANTITY__c.field-meta.xml
<CustomField>
    <fullName>QUANTITY__c</fullName>
    <label>QUANTITY</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>